<resources>
    <string name="app_name">Testing Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lets_find">Let\'s Find</string>
    <string name="search_work">Search your work here</string>
    <string name="submit_report">Submit Report</string>
    <string name="status">status</string>
    <string name="activity_note">Activity Note :</string>
    <string name="details">Details</string>
    <string name="assignment">Assignment</string>
    <string name="such_that_symbol">:</string>
    <string name="department">Department</string>
    <string name="location">Location</string>
    <string name="union_city">UNION CITY</string>
    <string name="work_order">Work Order</string>
    <string name="released_by">Released By</string>
    <string name="authorized_by">Authorized By</string>
    <string name="task_plan">Task Plan</string>
    <string name="supplier">Supplier</string>
    <string name="crew_leader">Crew Leader *</string>
    <string name="date">Date</string>
    <string name="date_must">Date *</string>
    <string name="work_address">Work Address *</string>
    <string name="officer_name">Officer Name *</string>
    <string name="police_department">Police Department *</string>
    <string name="hours_worked">Hours Worked *</string>
    <string name="police_car_used">Police car used *</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="upload_police_backup_sheet_image">Upload Police Backup Sheet Image *</string>
    <string name="upload_police_backup_sheet_image_optional">Upload Police Backup Sheet Image (Optional)</string>
    <string name="submit">Submit</string>
    <string name="work_order_number">Work Order Number</string>
    <string name="submit_successfully">Submit Successfully</string>
    <string name="valve_id">Valve ID *</string>
    <string name="valve_size">Valve Size *</string>
    <string name="six">6</string>
    <string name="eight">8</string>
    <string name="ten">10</string>
    <string name="twelve">12</string>
    <string name="sixteen">16</string>
    <string name="others">Others</string>
    <string name="valve_start_position">Valve Start Position *</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="number_of_turns">Number Of Turns *</string>
    <string name="fifteen">15</string>
    <string name="could_not">Could Not O..</string>
    <string name="is_packing_leaking">Is Packing Leaking? *</string>
    <string name="time_start_exercise">Time Start Exercise *</string>
    <string name="was_valve_box_raised">Was Valve Box Raised *</string>
    <string name="valve_image_before">Valve Image Before *</string>
    <string name="valve_image_after">Valve Image After *</string>
    <string name="optional_image">Optional Image</string>
    <string name="closest_address_notes">Closest Address / Notes</string>
    <string name="restoration_type">Restoration Type</string>
    <string name="grass">GRASS</string>
    <string name="concrete">CONCRETE</string>
    <string name="asphalt">ASPHALT</string>
    <string name="suez_side">Service Material Type ( Suez Side )</string>
    <string name="gz">GZ</string>
    <string name="br">BR</string>
    <string name="lz">LZ</string>
    <string name="cp">CP</string>
    <string name="service_material_type_customer_side">Service Material Type ( Customer Side )</string>
    <string name="unknown">Unknown</string>
    <string name="next">Next</string>
    <string name="service_length">Service Length *</string>
    <string name="lead_removed">Lead Removed *</string>
    <string name="service_depth">Service Depth *</string>
    <string name="main_size">Main Size *</string>
    <string name="main_depth">Main Depth *</string>
    <string name="main_to_curb_distance">Main To Curb Distance *</string>
    <string name="as_built_information">As Built Information</string>
    <string name="cb_loc_corners_of_house">CB LOC Corners Of House</string>
    <string name="excavation_info">Excavation Info</string>
    <string name="curb_size_depth">Curb Size / Depth</string>
    <string name="main_excav_size">Main Excav Size</string>
    <string name="trench_excav_size">Trench Excav Size</string>
    <string name="gas_excav_size">Gas Excav Size</string>
    <string name="notes_about_install_work">Notes about install / Work</string>
    <string name="precon_photo">Precon Photo</string>
    <string name="markout_photo">Markout photo</string>
    <string name="curb_stop_photo">Curb Stop Photo</string>
    <string name="old_tap">Old Tap</string>
    <string name="service_line">Service Line</string>
    <string name="concrete_thickness">Concrete Thickness</string>
    <string name="work_sheet">Work Sheet</string>
    <string name="end_of_day_photo">End OF Day Photo</string>
    <string name="extra_photo">Extra Photo</string>
    <string name="town_job">Town / Job *</string>
    <string name="rutherford">Rutherford</string>
    <string name="work_performed">Work Performed *</string>
    <string name="topsoil">TopSoil</string>
    <string name="is_work_complete">Is Work Complete ? *</string>
    <string name="need_to_ret">Need To Ret..</string>
    <string name="photo_1">Photo 1 *</string>
    <string name="photo_2">Photo 2</string>
    <string name="photo_3">Photo 3</string>
    <string name="notes_comments">Notes / Comments</string>
    <string name="rate_now">Rate Now</string>
    <string name="share_now">Share Now</string>

</resources>